// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CommentDataMap > returns correctly formatted output... > while granularity is date 1`] = `
{
  "alternativeUnitId": null,
  "avgDuration": 9000,
  "avgDurationFormatted": "2h 30m 00s",
  "avgDurationVal": 1970-01-01T02:30:00.000Z,
  "color": "#E67E22",
  "defined": true,
  "entityCount": 1,
  "entityCountLabel": "1",
  "entityGroupId": [
    1,
  ],
  "entityGroupName": "Mechanics T2",
  "entityId": [
    167,
  ],
  "entityKey": "commentId",
  "entityName": "Konveier 1",
  "entityPctPlannedTime": 0.25,
  "entityPctPlannedTimeLabel": "25,00%",
  "entitySubType": "Unplanned",
  "factory": null,
  "factoryId": [
    null,
  ],
  "groupingKey": "2022-01-21",
  "idealAltQty": null,
  "idealAltQtyFormatted": "0,00",
  "idealQty": null,
  "idealQtyFormatted": "0,00",
  "includedInOeeStops": 4500,
  "isFake": false,
  "itemGroupingId": "2022-01-21",
  "location": "Teadmata",
  "lotCode": null,
  "measureLabel": "21",
  "noData": null,
  "notes": null,
  "notesCount": 0,
  "operator": null,
  "operatorId": [
    null,
  ],
  "positionId": [
    0,
  ],
  "product": null,
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    null,
  ],
  "productionOrder": null,
  "rowPlannedTime": 18000,
  "shiftTemplate": null,
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "stationGroup",
  "stationGroupId": [
    1,
  ],
  "stationId": [
    53,
  ],
  "tableTimeLabel": "21.01.2022",
  "tooltipXLabel": "21.01.2022",
  "totalPlannedTime": null,
  "unitId": null,
  "value": 1970-01-01T02:30:00.000Z,
  "valueLabel": "2h 30m 00s",
  "valueSec": 9000,
  "xScaleValue": "2022-01-21",
  "xScaleValueFormatted": "21.01.2022",
}
`;

exports[`CommentDataMap > returns correctly formatted output... > while granularity is month 1`] = `
{
  "alternativeUnitId": null,
  "avgDuration": 9000,
  "avgDurationFormatted": "2h 30m 00s",
  "avgDurationVal": 1970-01-01T02:30:00.000Z,
  "color": "#E67E22",
  "defined": true,
  "entityCount": 1,
  "entityCountLabel": "1",
  "entityGroupId": [
    1,
  ],
  "entityGroupName": "Mechanics T2",
  "entityId": [
    167,
  ],
  "entityKey": "commentId",
  "entityName": "Konveier 1",
  "entityPctPlannedTime": 0.25,
  "entityPctPlannedTimeLabel": "25,00%",
  "entitySubType": "Unplanned",
  "factory": null,
  "factoryId": [
    null,
  ],
  "groupingKey": "202201",
  "idealAltQty": null,
  "idealAltQtyFormatted": "0,00",
  "idealQty": null,
  "idealQtyFormatted": "0,00",
  "includedInOeeStops": 4500,
  "isFake": false,
  "itemGroupingId": "202201",
  "location": "Teadmata",
  "lotCode": null,
  "measureLabel": "January",
  "noData": null,
  "notes": null,
  "notesCount": 0,
  "operator": null,
  "operatorId": [
    null,
  ],
  "positionId": [
    0,
  ],
  "product": null,
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    null,
  ],
  "productionOrder": null,
  "rowPlannedTime": 18000,
  "shiftTemplate": null,
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "stationGroup",
  "stationGroupId": [
    1,
  ],
  "stationId": [
    53,
  ],
  "tableTimeLabel": "January",
  "tooltipXLabel": "01.01.2022 - 31.01.2022",
  "totalPlannedTime": null,
  "unitId": null,
  "value": 1970-01-01T02:30:00.000Z,
  "valueLabel": "2h 30m 00s",
  "valueSec": 9000,
  "xScaleValue": "202201",
  "xScaleValueFormatted": "01.01.2022 - 31.01.2022",
}
`;

exports[`CommentDataMap > returns correctly formatted output... > while granularity is total 1`] = `
{
  "alternativeUnitId": null,
  "avgDuration": 9000,
  "avgDurationFormatted": "2h 30m 00s",
  "avgDurationVal": 1970-01-01T02:30:00.000Z,
  "color": "#E67E22",
  "defined": true,
  "entityCount": 1,
  "entityCountLabel": "1",
  "entityGroupId": [
    1,
  ],
  "entityGroupName": "Mechanics T2",
  "entityId": [
    167,
  ],
  "entityKey": "commentId",
  "entityName": "Konveier 1",
  "entityPctPlannedTime": 0.25,
  "entityPctPlannedTimeLabel": "25,00%",
  "entitySubType": "Unplanned",
  "factory": null,
  "factoryId": [
    null,
  ],
  "groupingKey": 167,
  "idealAltQty": null,
  "idealAltQtyFormatted": "0,00",
  "idealQty": null,
  "idealQtyFormatted": "0,00",
  "includedInOeeStops": 4500,
  "isFake": false,
  "itemGroupingId": 167,
  "location": "Teadmata",
  "lotCode": "LOT-001",
  "measureLabel": "Konveier 1",
  "noData": null,
  "notes": null,
  "notesCount": 0,
  "operator": null,
  "operatorId": [
    null,
  ],
  "positionId": [
    0,
  ],
  "product": null,
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    null,
  ],
  "productionOrder": "ORDER-42",
  "rowPlannedTime": 18000,
  "shiftTemplate": null,
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "stationGroup",
  "stationGroupId": [
    1,
  ],
  "stationId": [
    53,
  ],
  "tableTimeLabel": "Konveier 1",
  "tooltipXLabel": "Konveier 1",
  "totalPlannedTime": null,
  "unitId": null,
  "value": 1970-01-01T02:30:00.000Z,
  "valueLabel": "2h 30m 00s",
  "valueSec": 9000,
  "xScaleValue": 167,
  "xScaleValueFormatted": "",
}
`;

exports[`CommentDataMap > returns correctly formatted output... > while granularity is weekofyear 1`] = `
{
  "alternativeUnitId": null,
  "avgDuration": 9000,
  "avgDurationFormatted": "2h 30m 00s",
  "avgDurationVal": 1970-01-01T02:30:00.000Z,
  "color": "#E67E22",
  "defined": true,
  "entityCount": 1,
  "entityCountLabel": "1",
  "entityGroupId": [
    1,
  ],
  "entityGroupName": "Mechanics T2",
  "entityId": [
    167,
  ],
  "entityKey": "commentId",
  "entityName": "Konveier 1",
  "entityPctPlannedTime": 0.25,
  "entityPctPlannedTimeLabel": "25,00%",
  "entitySubType": "Unplanned",
  "factory": null,
  "factoryId": [
    null,
  ],
  "groupingKey": "202203",
  "idealAltQty": null,
  "idealAltQtyFormatted": "0,00",
  "idealQty": null,
  "idealQtyFormatted": "0,00",
  "includedInOeeStops": 4500,
  "isFake": false,
  "itemGroupingId": "202203",
  "location": "Teadmata",
  "lotCode": null,
  "measureLabel": "3",
  "noData": null,
  "notes": null,
  "notesCount": 0,
  "operator": null,
  "operatorId": [
    null,
  ],
  "positionId": [
    0,
  ],
  "product": null,
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    null,
  ],
  "productionOrder": null,
  "rowPlannedTime": 18000,
  "shiftTemplate": null,
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "stationGroup",
  "stationGroupId": [
    1,
  ],
  "stationId": [
    53,
  ],
  "tableTimeLabel": "Week 3",
  "tooltipXLabel": "Week 3",
  "totalPlannedTime": null,
  "unitId": null,
  "value": 1970-01-01T02:30:00.000Z,
  "valueLabel": "2h 30m 00s",
  "valueSec": 9000,
  "xScaleValue": "202203",
  "xScaleValueFormatted": "Week 3",
}
`;

exports[`CommentDataMap > returns correctly formatted output... > while granularity is year 1`] = `
{
  "alternativeUnitId": null,
  "avgDuration": 9000,
  "avgDurationFormatted": "2h 30m 00s",
  "avgDurationVal": 1970-01-01T02:30:00.000Z,
  "color": "#E67E22",
  "defined": true,
  "entityCount": 1,
  "entityCountLabel": "1",
  "entityGroupId": [
    1,
  ],
  "entityGroupName": "Mechanics T2",
  "entityId": [
    167,
  ],
  "entityKey": "commentId",
  "entityName": "Konveier 1",
  "entityPctPlannedTime": 0.25,
  "entityPctPlannedTimeLabel": "25,00%",
  "entitySubType": "Unplanned",
  "factory": null,
  "factoryId": [
    null,
  ],
  "groupingKey": "2022",
  "idealAltQty": null,
  "idealAltQtyFormatted": "0,00",
  "idealQty": null,
  "idealQtyFormatted": "0,00",
  "includedInOeeStops": 4500,
  "isFake": false,
  "itemGroupingId": "2022",
  "location": "Teadmata",
  "lotCode": null,
  "measureLabel": "2022",
  "noData": null,
  "notes": null,
  "notesCount": 0,
  "operator": null,
  "operatorId": [
    null,
  ],
  "positionId": [
    0,
  ],
  "product": null,
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    null,
  ],
  "productionOrder": null,
  "rowPlannedTime": 18000,
  "shiftTemplate": null,
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "stationGroup",
  "stationGroupId": [
    1,
  ],
  "stationId": [
    53,
  ],
  "tableTimeLabel": "2022",
  "tooltipXLabel": "2022",
  "totalPlannedTime": null,
  "unitId": null,
  "value": 1970-01-01T02:30:00.000Z,
  "valueLabel": "2h 30m 00s",
  "valueSec": 9000,
  "xScaleValue": "2022",
  "xScaleValueFormatted": "2022",
}
`;

exports[`CommentDataMap > returns correctly unformatted output... > while granularity is date 1`] = `
{
  "alternativeUnitId": null,
  "avgDuration": null,
  "avgDurationFormatted": null,
  "avgDurationVal": null,
  "color": "#E67E22",
  "defined": null,
  "entityCount": 1,
  "entityCountLabel": 1,
  "entityGroupId": 1,
  "entityGroupName": "Mechanics T2",
  "entityId": 167,
  "entityKey": null,
  "entityName": "Konveier 1",
  "entityPctPlannedTime": null,
  "entityPctPlannedTimeLabel": null,
  "entitySubType": [
    "Unplanned",
  ],
  "factory": null,
  "factoryId": null,
  "groupingKey": null,
  "idealAltQty": null,
  "idealAltQtyFormatted": null,
  "idealQty": null,
  "idealQtyFormatted": null,
  "includedInOeeStops": 4500,
  "isFake": false,
  "itemGroupingId": "2022-01-21",
  "location": "Teadmata",
  "lotCode": null,
  "measureLabel": "2022-01-21",
  "noData": null,
  "notes": null,
  "notesCount": 0,
  "operator": null,
  "operatorId": null,
  "positionId": 0,
  "product": null,
  "productGroup": null,
  "productGroupId": null,
  "productId": null,
  "productionOrder": null,
  "rowPlannedTime": 18000,
  "shiftTemplate": null,
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "stationGroup",
  "stationGroupId": 1,
  "stationId": 53,
  "tableTimeLabel": "2022-01-21",
  "tooltipXLabel": "2022-01-21",
  "totalPlannedTime": null,
  "unitId": null,
  "value": 9000,
  "valueLabel": 9000,
  "valueSec": 9000,
  "xScaleValue": "2022-01-21",
  "xScaleValueFormatted": "2022-01-21",
}
`;

exports[`CommentDataMap > returns correctly unformatted output... > while granularity is month 1`] = `
{
  "alternativeUnitId": null,
  "avgDuration": null,
  "avgDurationFormatted": null,
  "avgDurationVal": null,
  "color": "#E67E22",
  "defined": null,
  "entityCount": 1,
  "entityCountLabel": 1,
  "entityGroupId": 1,
  "entityGroupName": "Mechanics T2",
  "entityId": 167,
  "entityKey": null,
  "entityName": "Konveier 1",
  "entityPctPlannedTime": null,
  "entityPctPlannedTimeLabel": null,
  "entitySubType": [
    "Unplanned",
  ],
  "factory": null,
  "factoryId": null,
  "groupingKey": null,
  "idealAltQty": null,
  "idealAltQtyFormatted": null,
  "idealQty": null,
  "idealQtyFormatted": null,
  "includedInOeeStops": 4500,
  "isFake": false,
  "itemGroupingId": "202201",
  "location": "Teadmata",
  "lotCode": null,
  "measureLabel": "202201",
  "noData": null,
  "notes": null,
  "notesCount": 0,
  "operator": null,
  "operatorId": null,
  "positionId": 0,
  "product": null,
  "productGroup": null,
  "productGroupId": null,
  "productId": null,
  "productionOrder": null,
  "rowPlannedTime": 18000,
  "shiftTemplate": null,
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "stationGroup",
  "stationGroupId": 1,
  "stationId": 53,
  "tableTimeLabel": "202201",
  "tooltipXLabel": "202201",
  "totalPlannedTime": null,
  "unitId": null,
  "value": 9000,
  "valueLabel": 9000,
  "valueSec": 9000,
  "xScaleValue": "202201",
  "xScaleValueFormatted": "202201",
}
`;

exports[`CommentDataMap > returns correctly unformatted output... > while granularity is total 1`] = `
{
  "alternativeUnitId": null,
  "avgDuration": null,
  "avgDurationFormatted": null,
  "avgDurationVal": null,
  "color": "#E67E22",
  "defined": null,
  "entityCount": 1,
  "entityCountLabel": 1,
  "entityGroupId": 1,
  "entityGroupName": "Mechanics T2",
  "entityId": 167,
  "entityKey": null,
  "entityName": "Konveier 1",
  "entityPctPlannedTime": null,
  "entityPctPlannedTimeLabel": null,
  "entitySubType": [
    "Unplanned",
  ],
  "factory": null,
  "factoryId": null,
  "groupingKey": null,
  "idealAltQty": null,
  "idealAltQtyFormatted": null,
  "idealQty": null,
  "idealQtyFormatted": null,
  "includedInOeeStops": 4500,
  "isFake": false,
  "itemGroupingId": 167,
  "location": "Teadmata",
  "lotCode": "LOT-001",
  "measureLabel": "Konveier 1",
  "noData": null,
  "notes": null,
  "notesCount": 0,
  "operator": null,
  "operatorId": null,
  "positionId": 0,
  "product": null,
  "productGroup": null,
  "productGroupId": null,
  "productId": null,
  "productionOrder": "ORDER-42",
  "rowPlannedTime": 18000,
  "shiftTemplate": null,
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "stationGroup",
  "stationGroupId": 1,
  "stationId": 53,
  "tableTimeLabel": "Konveier 1",
  "tooltipXLabel": "Konveier 1",
  "totalPlannedTime": null,
  "unitId": null,
  "value": 9000,
  "valueLabel": 9000,
  "valueSec": 9000,
  "xScaleValue": 167,
  "xScaleValueFormatted": 167,
}
`;

exports[`CommentDataMap > returns correctly unformatted output... > while granularity is weekofyear 1`] = `
{
  "alternativeUnitId": null,
  "avgDuration": null,
  "avgDurationFormatted": null,
  "avgDurationVal": null,
  "color": "#E67E22",
  "defined": null,
  "entityCount": 1,
  "entityCountLabel": 1,
  "entityGroupId": 1,
  "entityGroupName": "Mechanics T2",
  "entityId": 167,
  "entityKey": null,
  "entityName": "Konveier 1",
  "entityPctPlannedTime": null,
  "entityPctPlannedTimeLabel": null,
  "entitySubType": [
    "Unplanned",
  ],
  "factory": null,
  "factoryId": null,
  "groupingKey": null,
  "idealAltQty": null,
  "idealAltQtyFormatted": null,
  "idealQty": null,
  "idealQtyFormatted": null,
  "includedInOeeStops": 4500,
  "isFake": false,
  "itemGroupingId": "202203",
  "location": "Teadmata",
  "lotCode": null,
  "measureLabel": "202203",
  "noData": null,
  "notes": null,
  "notesCount": 0,
  "operator": null,
  "operatorId": null,
  "positionId": 0,
  "product": null,
  "productGroup": null,
  "productGroupId": null,
  "productId": null,
  "productionOrder": null,
  "rowPlannedTime": 18000,
  "shiftTemplate": null,
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "stationGroup",
  "stationGroupId": 1,
  "stationId": 53,
  "tableTimeLabel": "202203",
  "tooltipXLabel": "202203",
  "totalPlannedTime": null,
  "unitId": null,
  "value": 9000,
  "valueLabel": 9000,
  "valueSec": 9000,
  "xScaleValue": "202203",
  "xScaleValueFormatted": "202203",
}
`;

exports[`CommentDataMap > returns correctly unformatted output... > while granularity is year 1`] = `
{
  "alternativeUnitId": null,
  "avgDuration": null,
  "avgDurationFormatted": null,
  "avgDurationVal": null,
  "color": "#E67E22",
  "defined": null,
  "entityCount": 1,
  "entityCountLabel": 1,
  "entityGroupId": 1,
  "entityGroupName": "Mechanics T2",
  "entityId": 167,
  "entityKey": null,
  "entityName": "Konveier 1",
  "entityPctPlannedTime": null,
  "entityPctPlannedTimeLabel": null,
  "entitySubType": [
    "Unplanned",
  ],
  "factory": null,
  "factoryId": null,
  "groupingKey": null,
  "idealAltQty": null,
  "idealAltQtyFormatted": null,
  "idealQty": null,
  "idealQtyFormatted": null,
  "includedInOeeStops": 4500,
  "isFake": false,
  "itemGroupingId": "2022",
  "location": "Teadmata",
  "lotCode": null,
  "measureLabel": "2022",
  "noData": null,
  "notes": null,
  "notesCount": 0,
  "operator": null,
  "operatorId": null,
  "positionId": 0,
  "product": null,
  "productGroup": null,
  "productGroupId": null,
  "productId": null,
  "productionOrder": null,
  "rowPlannedTime": 18000,
  "shiftTemplate": null,
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "stationGroup",
  "stationGroupId": 1,
  "stationId": 53,
  "tableTimeLabel": "2022",
  "tooltipXLabel": "2022",
  "totalPlannedTime": null,
  "unitId": null,
  "value": 9000,
  "valueLabel": 9000,
  "valueSec": 9000,
  "xScaleValue": "2022",
  "xScaleValueFormatted": "2022",
}
`;
